# benchmark_cli

./: .env.example  .gitignore  README.md  journal.md  main.py  pyproject.toml
benchmarks/: __init__.py  analyze_repo_bench_cases.py  eval_repo_bench_retriever.py  run_repo_bench_grid.py
cli/: __init__.py  checkpoints.py  codex_agent.py  commands.py  config.py  datasets.py  runner.py  slurm.py  tui.py
config/: defaults.json
create/: __init__.py  coir_download.py  repoeval_repo.py  swebench_repo.py
skill/: SKILL.md
